--- a/index.html
+++ b/index.html
@@ -31,7 +31,7 @@ description: Leading Bio-Fertilizer Manufacturer in India
 				<a href="/products">
 				<img src="/images/tn-farming.jpg"/ alt="farmer">
 				</a>
-				<a href="https://www.flickr.com/photos/tataimitra/9421742217/" target="_blank">Source: Flickr</a>
+				<a href="https://www.flickr.com/photos/tataimitra/9421742217/" target="_blank" rel="noopener noreferrer">Source: Flickr</a>
 			</div>
 		</div>
 	</section>
