--- a/people.html
+++ b/people.html
@@ -6,7 +6,7 @@ description: We help to built a better world.
 	{% for person in site.people %}
 		<li>
 			<div class="square-image"><img src="{% include relative-src.html src=person.image_path %}" alt="{{ person.name }}"/></div>
-			<div class="name"><a target="_blank" href="{% include relative-src.html src=person.link %}">{{ person.name }}</a></div>
+			<div class="name"><a target="_blank" rel="noopener noreferrer" href="{% include relative-src.html src=person.link %}">{{ person.name }}</a></div>
 			<div class="position">{{ person.position}}</div>
 			<div class="position">{{ person.blurb}}</div>
 		</li>
